2011-05-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-put-image-function): New variable.
	(shr-image-fetched, shr-image-displayer, shr-tag-img): Funcall it.
	(shr-put-image): Return scaled image.

	* gnus-art.el (gnus-shr-put-image): New function.
	(gnus-article-prepare-display): Bind shr-put-image-function to it.

	* gnus-html.el (gnus-html-wash-images): Register scaled images, not
	original ones, as deletable.

2011-05-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nntp.el (nntp-open-connection): Set TCP keepalive option.

2011-05-09  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (registry-full): Add convenience method.  Fix logic.
	(registry-insert): Use it.  Fix logic here too.

	* gnus-registry.el (gnus-registry-insert): Add wrapper that calls
	`registry-prune' if `registry-full' returns t.
	(gnus-registry-handle-action)
	(gnus-registry-get-or-make-entry, gnus-registry-set-id-key)
	(gnus-registry-usage-test): Use it.

2011-05-07  Julien Danjou  <julien@danjou.info>

	* shr.el (shr-link): Make shr-link inherit from link by default.

2011-05-06  Teodor Zlatanov  <tzz@lifelogs.com>

	* shr.el (shr-urlify, shr-link): Fix shr-link face.

2011-05-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* shr.el (shr-urlify, shr-link): Still broken but at least doesn't
	error out because the face is not a list.

2011-05-05  Glenn Morris  <rgm@gnu.org>

	* gnus-start.el (gnus-propagate-marks): Declare.

2011-05-04  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (registry-reindex): Fix percentage message.

2011-05-03  Teodor Zlatanov  <tzz@lifelogs.com>

	* shr.el: Add shr-link face for links.
	(shr-urlify): Use it.

	* registry.el (registry-insert): Make error message more helpful.

2011-05-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-schedule-image-fetching):
	Use url-queue-retrieve, if it exists.

	* shr.el (shr-tag-img): Ditto.

	* gnus.el: Autoload more gnus-agent functions.
